# poke-pocket-sim

./: .flake8  .gitignore  LICENSE  README.md  ability.py  action.py  attack.py  card.py  condition.py  csv_handler.ipynb  data_collector.py  deck.py  demo_psychic_gardevoir_mewtwo.py  demo_single_player.py  dev-requirements.txt  generator_attack.py  item.py  match.py  mypy.ini  player.py  pyproject.toml  setup.py  supporter.py  test.py  test_data.csv  testmatch_psychic_gardevoir_mewtwo.py  train.py  trainer.py
.github/workflows/: reviewdog.yml  test_workflow.yml
examples/: demo_psychic_gardevoir_mewtwo.py  demo_single_player.py  examples_usage.py
pokepocketsim/: __init__.py  ability.py  action.py  attack.py  attack_common.py  card.py  condition.py  data_collector.py  database.json  deck.py  generator_attack.py  gui.py  item.py  match.py  player.py  protocols.py  supporter.py
pokepocketsim/core/: __init__.py  action.py  card.py  deck.py  generator_attack.py  match.py  player.py
pokepocketsim/data/: database.json
pokepocketsim/engine/: __init__.py  action_engine.py  action_processor.py  game_engine.py  game_rules.py
pokepocketsim/local/: __init__.py  cpu_player.py  human_player.py
pokepocketsim/mechanics/: __init__.py  ability.py  action.py  attack.py  attack_common.py  condition.py  item.py  supporter.py
pokepocketsim/state/: __init__.py  action_state.py  card_state.py  game_state.py  match_state.py  player_state.py  serialization.py
pokepocketsim/ui/: __init__.py  cli.py  gui.py
pokepocketsim/utils/: __init__.py  color_print.py  config.py  validation.py
tests/: test_simple.py  tests.py
ui/: cli.py
