[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poke-pocket-sim"
version = "0.1.0"
description = "A Pokemon TCG Pocket Simulator"
readme = "README.md"
authors = [
    {name = "Aapo Montin"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/apmnt/poke-pocket-sim"
Repository = "https://github.com/apmnt/poke-pocket-sim"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]